# fair-k-submodular

./: CMakeLists.txt  LICENSE  README.md  greedy.cpp  sensor.cpp  tools.h
